# FlintQS

./: .gitignore  AUTHORS  F2matrix.cpp  NEWS  QS.cpp  QStodo.txt  README  TonelliShanks.cpp  TonelliShanks.h  configure.ac  lanczos.h  makefile  makefile.opteron  makefile.osx64  makefile.sage
src/: F2matrix.cpp  F2matrix.h  Makefile.am  ModuloArith.cpp  ModuloArith.h  QS.cpp  TonelliShanks.h  lanczos.c  lanczos.cpp  lanczos.h  lprels.c  lprels.cpp  lprels.h
